repo(blackarch): Added blackarch repo for automotive tools

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -75,6 +75,10 @@ LocalFileSigLevel = Optional
 #[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
+[blackarch]
+SigLevel = Optional TrustAll
+Server = https://mirrors.cicku.me/blackarch/$repo/os/$arch
+
 [core]
 Include = /etc/pacman.d/mirrorlist
 
@@ -90,11 +94,5 @@ Include = /etc/pacman.d/mirrorlist
 #[multilib-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-#[multilib]
-#Include = /etc/pacman.d/mirrorlist
-
-# An example of a custom package repository.  See the pacman manpage for
-# tips on creating your own repositories.
-#[custom]
-#SigLevel = Optional TrustAll
-#Server = file:///home/custompkgs
+[multilib]
+Include = /etc/pacman.d/mirrorlist
