--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -75,8 +75,9 @@ LocalFileSigLevel = Optional
 #[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
+# --- BlackArch repo (bootstrap: allow DB + package until keyring is installed) ---
 [blackarch]
-SigLevel = Optional TrustAll
+SigLevel = DatabaseOptional PackageOptional
 Server = https://mirrors.cicku.me/blackarch/$repo/os/$arch
 
 [core]
