added basic config

--- a/archiso/pacman.conf
+++ b/archiso/pacman.conf
@@ -30,12 +30,13 @@ Architecture = auto
 
 # Misc options
 #UseSyslog
-#Color
+Color
 #NoProgressBar
 # We cannot check disk space from within a chroot environment
 #CheckSpace
-#VerbosePkgLists
-ParallelDownloads = 5
+VerbosePkgLists
+ParallelDownloads = 8
+ILoveCandy
 #DownloadUser = alpm
 #DisableSandbox
 
@@ -76,9 +77,6 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 # --- BlackArch repo (bootstrap: allow DB + package until keyring is installed) ---
-[blackarch]
-SigLevel = DatabaseOptional PackageOptional
-Server = https://mirrors.cicku.me/blackarch/$repo/os/$arch
 
 [core]
 Include = /etc/pacman.d/mirrorlist
@@ -97,3 +95,6 @@ Include = /etc/pacman.d/mirrorlist
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
+
+[blackarch]
+Include = /etc/pacman.d/blackarch-mirrorlist
